Added Navigation Files
Added a previously made table layout to organize files, so I can jump in and out of projects. Markdown for other pages is currently being worked on.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home | Kaden Hansen: CSE 310 Portfolio</title>
     <meta name="description" content="This is my CSE 310 course portfolio website.">
     <meta name="author" content="Kaden Hansen">
-    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <script src="/format-cells.js" defer></script>
+    <script src="format-cells.js" defer></script>
 </head>
 <body>
     <header>
@@ -36,21 +36,21 @@
         <div class="table-container">
             <div class="table-row">
                 <div class="left-div">
-                    <p class="table-content"><a href="readme.md" target="_self">README Plan</a></p>
-                </div>
-                <div class="right-div">
-                    <p class="table-content progress"></p>
-                </div>
-            </div>
-            <div class="table-row">
-                <div class="left-div">
-                    <p class="table-content"><a href="unit2/unit2.html" target="_self">Project: Score to Movie</a></p>
+                    <p class="table-content"><a href="week1_sprint/index.html" target="_self">Sprint 1</a></p>
                 </div>
                 <div class="right-div">
                     <p class="table-content progress"></p>
                 </div>
             </div>
             <!-- <div class="table-row">
+                <div class="left-div">
+                    <p class="table-content"><a href="unit2/unit2.html" target="">Unit 2</a></p>
+                </div>
+                <div class="right-div">
+                    <p class="table-content complete"></p>
+                </div>
+            </div>
+            <div class="table-row">
                 <div class="left-div">
                     <p class="table-content"><a href="unit3/unit3.html" target="">Unit 3</a></p>
                 </div>
